Updating multiple files

--- a/index.html
+++ b/index.html
@@ -208,37 +208,50 @@
         <section>
             <p>Help is here. <span>Whenever and however you need it.</span></p>
             <article>
-                <div>
-                    <p>APPLE SPECIALIST</p>
-                    <h1>Shop one on one with a
-                        <br>Specialist. Online or in a store.
-                    </h1>
-                </div>
-                <div>
-                    <img src="images/specialist.png" alt="">
-                </div>
-            </article>
-            <article>
-                <div>
-                    <p>APPLE SPECIALIST</p>
-                    <h1>Shop one on one with a
-                        <br>Specialist. Online or in a store.
-                    </h1>
-                </div>
-                <div>
-                    <img src="images/specialist.png" alt="">
-                </div>
-            </article>
-            <article>
-                <div>
-                    <p>APPLE SPECIALIST</p>
-                    <h1>Shop one on one with a
-                        <br> Specialist. Online or in a store.
-                    </h1>
-                </div>
-                <div>
-                    <img src="images/specialist.png" alt="">
-                </div>
+                <article>
+                    <div>
+                        <p>APPLE SPECIALIST</p>
+                        <h1>Shop one on one with a
+                            <br>Specialist. Online or in a store.
+                        </h1>
+                    </div>
+                    <div>
+                        <img src="images/specialist.png" alt="">
+                    </div>
+                </article>
+                <article>
+                    <div>
+                        <p>NEW</p>
+                        <h1>Shop with a Specialist
+                            <br>over video.
+                        </h1>
+                        <p>Choose your next device <br>
+                            in a guided, one-way <br>
+                            video session.</p>
+                    </div>
+                    <div>
+                        <img src="images/specialist-video.png" alt="">
+                    </div>
+                </article>
+                <article>
+                    <article>
+                        <p>Get to know your new device
+                            <br>with a free Personal Session.
+                        </p>
+                        <div>
+                            <img src="images/apps.png" alt="">
+                        </div>
+                    </article>
+                    <article>
+                        <p>Get expert service <br>
+                            and support at the
+                            <br>Genius Bar.
+                        </p>
+                        <div>
+                            <img src="images/store-card.png" alt="">
+                        </div>
+                    </article>
+                </article>
             </article>
         </section>
         <section></section>
